# alfred-eudic-workflow

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  Package.resolved  Package.swift  README.md  info.plist
Sources/AlfredEudicCLI/: AlfredEudicApp.swift  CommonTools.swift
Sources/AlfredEudicCLI/Command/: Command+Search.swift  Command+Update.swift  Command.swift  SearchCommand.swift
Sources/SimpleDictionaryCore/: DictionaryManager.swift  PersistenceManager.swift  StardictDatabase.swift  StardictEntry.swift  test.swift
Sources/SimpleDictionaryCore/Extension/: String.swift
Sources/SimpleDictionaryCore/Resources/: words_alpha.txt
script/: search_eudic.sh  speak_eudic.sh
src/: Updater.php  info.plist  main.rs  search_eudic.sh  speak_eudic.sh  workflow_utils.rs
src/command/: mod.rs  search.rs
src/dictionary/: database.rs  entry.rs  manager.rs  mod.rs
swift/: Package.resolved
swift/Sources/AlfredEudicCLI/: AlfredEudicApp.swift
swift/Sources/AlfredEudicCLI/Command/: Command+Update.swift
swift/Sources/SimpleDictionaryCore/: DictionaryManager.swift  StardictDatabase.swift
swift/Sources/SimpleDictionaryCore/Extension/: Array.swift
